namespaces/observability/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.codegameeat.com`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
  tls:
    certResolver: le
