namespaces/observability/cilium-rules.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-allow
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - cluster
        - world
    - toEndpoints:
        - {}
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: dns-visibility
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: kube-system
          k8s:k8s-app: kube-dns
      toPorts:
      - ports:
        - port: "53"
          protocol: ANY
        rules:
          dns:
            - matchPattern: "*"
    - toFQDNs:
      - matchPattern: "*"
    - toEndpoints:
      - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: http-visibility
  namespace: observability
spec:
  endpointSelector: {}
  egress:
    - toPorts:
      - ports:
        - port: "80"
          protocol: TCP
        - port: "443"
          protocol: TCP
        - port: "8000"
          protocol: TCP
        - port: "9000"
          protocol: TCP
        - port: "3000"
          protocol: TCP
        - port: "8080"
          protocol: TCP
        - port: "6443"
          protocol: TCP
        - port: "22"
          protocol: TCP
        - port: "2379"
          protocol: TCP
        - port: "4240"
          protocol: TCP
        - port: "8472"
          protocol: UDP
        rules:
          http:
          - method: ".*"
    - toEndpoints:
      - {}
